rs/type-registry/tests/ui/invalid_crate_path.stderr
error: expected identifier
 --> tests/ui/invalid_crate_path.rs:4:21
  |
4 | #[type_info(crate = 123)]
  |                     ^^^
